@@ -87,10 +87,11 @@ public class HsView extends TwoColumnLayout {
         append(", bProcessing: true").
 
         // Sort by id upon page load
-        append(", aaSorting: [[2, 'desc']]").
+        append(", aaSorting: [[3, 'desc']]").
         append(", aoColumnDefs:[").
         // Maps Total, Maps Completed, Reduces Total and Reduces Completed
-        append("{'sType':'numeric', 'bSearchable': false, 'aTargets': [ 7, 8, 9, 10 ] }").
+        append("{'sType':'numeric', 'bSearchable': false" +
+            ", 'aTargets': [ 8, 9, 10, 11 ] }").
         append("]}").
         toString();
   }
